criação de endpoint para listar usuarios
