# src/api/services/clima.service.ts
@@ -1,0 +1,12 @@
+export default class Clima {
+    public getClima() {
+        return [
+            {
+             city: "São Paulo",
+             temperature: 25,
+             description: "Parcialmente nublado",
+             humidity: 70
+            }
+        ];
+    }
+}
